<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/photo_of_sity"
        android:layout_width="600dp"
        android:layout_height="234dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poltava" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="184dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_stars_24" />

    <TextView
        android:id="@+id/tv_City"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/city"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_of_sity" />

    <TextView
        android:id="@+id/tv_Camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/camera"
        android:textColor="#655F5F"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_City"
        app:layout_constraintTop_toBottomOf="@+id/tv_City" />

    <TextView
        android:id="@+id/tv_Settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/settings"
        android:textColor="#655F5F"
        app:layout_constraintEnd_toEndOf="@+id/tv_Camera"
        app:layout_constraintStart_toStartOf="@+id/tv_Camera"
        app:layout_constraintTop_toBottomOf="@+id/tv_Camera" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="105dp" />

    <EditText
        android:id="@+id/ed_Camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/camera_description"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Camera"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/tv_Camera"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/ed_Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/camera_settings"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Settings"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/tv_Settings"
        tools:ignore="TouchTargetSizeCheck" />

    <ScrollView
        android:id="@+id/scroll_Description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_Discard"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_Settings"
        app:layout_constraintTop_toBottomOf="@+id/ed_Settings"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck">

        <TextView
            android:id="@+id/tv_Description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description_of_city"
            android:textColor="#655F5F" />
    </ScrollView>

    <Button
        android:id="@+id/bt_Upload"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="Upload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_Discard"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="Discard"
        app:layout_constraintBottom_toBottomOf="@+id/bt_Upload"
        app:layout_constraintEnd_toStartOf="@+id/bt_Upload"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bt_Upload" />
</androidx.constraintlayout.widget.ConstraintLayout>